--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "mysql": "^2.18.1"
   },
   "scripts": {
-    "serve": "node index.js",
+    "dev": "node index.js",
     "build": "ncc build index.js"
   }
 }
