--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@vercel/ncc": "^0.34.0",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.1",
     "global": "^4.4.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-crypto": "^1.0.0"
   },
   "scripts": {
     "dev": "node index.js",
