--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vercel/ncc": "^0.34.0",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "global": "^4.4.0",
     "katex": "^0.16.0",
