--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@types/katex": "^0.14.0",
     "@vercel/ncc": "^0.34.0",
+    "apidoc": "^0.52.0",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -19,6 +20,7 @@
   },
   "scripts": {
     "dev": "node index.js",
-    "build": "ncc build index.js"
+    "build": "ncc build index.js",
+    "api":"apidoc -i backend_api/ -o apidoc/"
   }
 }
